<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AVE Manager</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="subtitle_welcome_back">Sign in to manage your events</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_microsoft">Sign in with Microsoft</string>

    <string name="work_in_progress">Lavori in corso</string>
    <string name="work_in_progress_message">Questa funzionalità sarà presente nelle versioni successive.</string>
    <string name="logout">Logout</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="scan_qr">Scan QR</string>
    <string name="nome_organizzazione">Nome Organizzazione</string>
    <string name="aggiungi_invitato">Aggiungi Invitato</string>
    <string name="cerca_invitato">Cerca invitato</string>
    <string name="card_3_title">Voti</string>
    <string name="card_2_title">Votanti</string>
    <string name="card_1_title">Invitati</string>
    <string name="ragione_sociale">Ragione sociale</string>
    <string name="salva">Salva</string>
    <string name="seleziona_l_associazione">Seleziona l\'associazione</string>
    <string name="vedrai_gli_eventi_disponibili_solo_di_quella_scelta">Vedrai gli eventi disponibili solo di quella scelta</string>
    <string name="quorum">Quorum</string>
    <string name="avatarimage">avatarImage</string>
    <string name="cognome_nome">Cognome Nome</string>
    <string name="_0">0%</string>
    <string name="stato_del_quorum">Stato del quorum</string>

</resources>